--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<!-- Please update value in the {}  -->",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,22 @@
   },
   "homepage": "https://github.com/kaguya3222/button-component#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-interactions": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/builder-webpack4": "^6.5.14",
+    "@storybook/manager-webpack4": "^6.5.14",
+    "@storybook/react": "^6.5.14",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
-    "react": "^18.2.0",
+    "@types/react-dom": "^18.0.9",
+    "babel-loader": "^8.3.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0"
   }
 }
