--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "react-dom": "^18.2.0",
-    "react": "^18.2.0"
+    "@stitches/react": "^1.2.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
