--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "button-component-react",
   "version": "1.0.0",
-  "description": "<!-- Please update value in the {}  -->",
+  "description": "React button component",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
