chore: added github workflow

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "serve-storybook": "serve storybook-static",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
